# fastapi-distributed-websocket

./: .gitignore  Changelog.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint_and_test.yml
distributed_websocket/: __init__.py  _auth.py  _broker.py  _connection.py  _decorators.py  _exception_handlers.py  _exceptions.py  _inmemory_broker.py  _matching.py  _message.py  _subscriptions.py  _types.py  manager.py  proxy.py  types.py  utils.py
distributed_websockets/: __init__.py  _auth.py  _connection.py  _inmemory_broker.py  _message.py  manager.py  utils.py
tests/: api_gateway.py  app.py  conftest.py  test_auth.py  test_broker.py  test_brokers.py  test_connection.py  test_decorators.py  test_endpoint.py  test_exceptions.py  test_inmemory_broker.py  test_manager.py  test_matching.py  test_message.py  test_proxy.py  test_subscriptions.py
